--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,7 +94,11 @@ markdown_extensions:
   - fontawesome_markdown
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_div_format
   - pymdownx.keys
   - footnotes
   - attr_list
