--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,10 +112,14 @@ nav:
   - Linux:
     - linux_literacy/index.md
     - シェル: linux_literacy/shell.md
+    - 権限: linux_literacy//permission.md
   - 環境構築:
     - environment_setup/index.md
     - Ubuntu仮想マシン: environment_setup/ubuntu.md
     - ROS Melodic: environment_setup/ros_melodic.md
+  - ROSの基礎:
+    - ros_basic/index.md
+    - 全体像: ros_basic/outline.md
   - 雑記:
     - memo/index.md
     - URDF: memo/urdf.md
