--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,12 +14,15 @@ edit_uri: ""
 docs_dir: docs
 site_dir: site
 
+use_directory_urls: false
+
 theme:
   name: material
   #custom_dir: overrides
-  language: en
+  language: ja
   features:
     - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.expand
     - navigation.top
     - navigation.indexes
@@ -116,7 +119,7 @@ nav:
     - パーミッション: linux_literacy//permission.md
   - 環境構築:
     - environment_setup/index.md
-    - Ubuntu仮想マシン: environment_setup/ubuntu.md
+    - Ubuntu 仮想マシン: environment_setup/ubuntu.md
     - ROS Melodic: environment_setup/ros_melodic.md
   - ROSの基礎:
     - ros_basic/index.md
