--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: ROS Note
 site_url: https://alnicomag.github.io/ros-note/
 site_author: Sanada Tatsuya
 site_description: ""
-copyright: Copyright &copy; 2021 - Sanada Tatsuya
+copyright: Copyright &copy; 2021-2022 Sanada Tatsuya
 
 # Repository
 repo_name: alnicomag/ros-note
@@ -103,6 +103,7 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_div_format
   - pymdownx.keys
+  - pymdownx.mark
   - footnotes
   - attr_list
   - md_in_html
